# alchemy

./: .gitattributes  .gitignore  Cargo.toml  README.md  codecov.yml  tarpaulin.toml
.github/workflows/: rust.yml
benchmark/: Cargo.toml  micro.toml  tpcc.toml
benchmark/benches/micro/: table.rs
benchmark/benches/tpcc/: tpcc.rs
benchmark/src/: lib.rs  utils.rs
benchmark/src/micro/: config.rs  mod.rs  txn_result.rs
benchmark/src/tpcc/: config.rs  mod.rs  schemas.rs  tables.rs  txn_result.rs  workload.rs
benchmark/src/tpcc/query/: delivery.rs  mod.rs  new_order.rs  order_status.rs  payment.rs  stock_level.rs
experiments/micro-bench/: micro.ipynb
experiments/micro-bench/basic-02-05/: 10-20-table-basic_mm.json  11-43-table-basic_alchemy.json  11-58-table-basic_pm.json  12-06-table-basic_dram_only.json
experiments/micro-bench/basic-latency-02-04/: 10-40-table-basic_mm_latency.json  12-10-table-basic-latency-field-sync.json  12-12-table-basic-latency-tuple-sync.json  12-14-table-basic-latency-field-async.json  12-16-table-basic-latency-tuple-async.json
experiments/micro-bench/replacement-02-04/: 16-26-table-paper_replacement-uniform-field-0.json  16-38-table-paper_replacement-uniform-tuple-0.json  16-50-table-paper_replacement-selfsimilar02-field-0.json  17-02-table-paper_replacement-selfsimilar02-tuple-0.json  17-14-table-paper_replacement-uniform-field-0.1.json  17-17-table-paper_replacement-uniform-tuple-0.1.json  17-19-table-paper_replacement-selfsimilar02-field-0.1.json  (+15 more)
experiments/tpcc/: tpcc.ipynb
metric/src/: counter.rs  ctx_counter.rs  lib.rs  recorders.rs
src/: error.rs  lib.rs  query.rs  table.rs
src/async_task/: benches.rs  mod.rs  prefetcher.rs  task_switcher.rs  test_utils.rs  tests.rs
src/attribute_cache/: mod.rs
src/attribute_cache/clock_cache/: mod.rs  (+3 more)
src/cache_manager/: mod.rs
src/index/: mod.rs
src/log/: mod.rs
src/macro_utils/: Cargo.toml
src/storage/: mod.rs  oid_array.rs  pm_heap.rs  table_storage.rs
src/utils/: backoff.rs  mmap.rs  mod.rs  nt_copy.rs  obj_alloc.rs  prefetch.rs  test_gen.rs
(+106 files in other folders)
