[package]
name = "alchemy"
version = "0.1.0"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
macro_utils = { path = "src/macro_utils" }
serde = {version = "1.0", features = ["derive"]}
libc = "0.2"
once_cell = "1.5"
metric = { path = "metric" }
thiserror = "1.0"
spin = "0.9"
ahash = "0.7"
flurry = "0.3"
crossbeam-utils = "0.8"
congee = "0.2.0"
thread_local = "1.1"

[dependencies.memoffset]
version = "0.6"
features = ["unstable_const"]

[dev-dependencies]
shuttle = "0.0.7"

[features]
metrics = []
asans = []
latency = []
fuzz = []

[profile.bench]
opt-level = 3
debug-assertions = false
debug = true
lto = "fat"

[workspace]
members = [
    ".",
    "benchmark",
    "metric",
]
