[package]
name = "benchmark"
version = "0.1.0"
authors = ["Xiangpeng Hao <haoxiangpeng@hotmail.com>"]
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
once_cell = "1.5"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
regex = "1.4"
toml = "0.5"
metric = { path = "../metric" }
spin = "0.7"
shumai = "0.1"
rand_distr = "0.4"
zipf = "7.0"
selfsimilar = "0.1"
auto_ops = "0.3"
bincode = { git = "https://github.com/bincode-org/bincode.git" }
mimalloc = { version = "*", default-features = false }
libc = "0.2"

[features]
pcm = ["shumai/pcm"]
metrics = ["alchemy/metrics"]
flamegraph = ["shumai/flamegraph"]
perf = ["shumai/perf"]
latency = []


[dependencies.memoffset]
version = "0.6"
features = ["unstable_const"]

[dependencies.alchemy]
version = "0.1"
path = ".."
default-features = true 

[dependencies.crossbeam-utils]
git = "https://github.com/crossbeam-rs/crossbeam.git"
tag = "crossbeam-0.8.0"

[[bench]]
name = "tpcc"
path = "benches/tpcc/tpcc.rs"
harness = false


[[bench]]
name = "table"
path = "benches/micro/table.rs"
harness = false
